--- a/projects.json
+++ b/projects.json
@@ -2,7 +2,7 @@
   {
     "id": 1,
     "title": "Eclipse Hunter",
-    "category": "Jeux Vidéo",
+    "category": "Jeu Vidéo",
     "images": [
       "./assets/img/projet-1.png"
     ]
@@ -10,7 +10,7 @@
   {
     "id": 2,
     "title": "Bandit-Go",
-    "category": "Jeux Vidéo",
+    "category": "Jeu Vidéo",
     "images": [
       "./assets/img/projet-2.png"
     ]
@@ -26,7 +26,7 @@
   {
     "id": 4,
     "title": "La légende du prof chaos",
-    "category": "Jeux Vidéo",
+    "category": "Jeu Vidéo",
     "images": [
       "./assets/img/projet-4.png"
     ]
