pre-post-githubpage
pre-post-githubpage

correction mineure

--- a/projects.json
+++ b/projects.json
@@ -3,6 +3,8 @@
     "id": 1,
     "title": "Eclipse Hunter",
     "category": "Jeu Vidéo",
+    "titreDescription": "",
+    "description": "",
     "images": [
       "./assets/img/projet-1.png"
     ]
@@ -11,6 +13,8 @@
     "id": 2,
     "title": "Bandit-Go",
     "category": "Jeu Vidéo",
+    "titreDescription": "",
+    "description": "",
     "images": [
       "./assets/img/projet-2.png"
     ]
@@ -19,6 +23,8 @@
     "id": 3,
     "title": "La Machine",
     "category": "Conception Vidéo",
+    "titreDescription": "",
+    "description": "",
     "images": [
       "./assets/img/projet-3.png"
     ]
@@ -27,6 +33,8 @@
     "id": 4,
     "title": "La légende du prof chaos",
     "category": "Jeu Vidéo",
+    "titreDescription": "",
+    "description": "",
     "images": [
       "./assets/img/projet-4.png"
     ]
